[package]
name = "filedrop"
version = "0.1.0"
description = "FileDrop - P2P LAN File Transfer"
authors = ["you"]
edition = "2021"

[lib]
name = "filedrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "filedrop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
sha2 = "0.10"
hex = "0.4"
local-ip-address = "0.6"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
